--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Pardis Taghavi"
-  avatar           : "images/profile.jpg"
+  avatar           : "images/me.png"
   bio              : "Ph.D. student at Texas A&M University"
   location         : "College Station, TX"
   employer         :
