--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ google_analytics_id      :  G-ZZ1NGP6GFT
 
 # SEO Related
 google_site_verification :  F4D4Q68ZPjsCyE4HGHDxbmcshOJ-MTtrbHG9YREQyss # get google_site_verification from https://search.google.com/search-console/about
-bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
-baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
+bing_site_verification   :  8149475937CBBE15CEA9FF9F5690C937 # get bing_site_verification from https://www.bing.com/webmasters/about
+ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
 # Site Author
 author:
