--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : 
+  twitter          : https://x.com/nikai876?s=11&t=mHjd0UhkWG4vQm8MvRFM0A
   vine             :
   weibo            :
   xing             :
